tests/snapshots/integration__integration_tests__approval_ui__approval_multiple_commands.snap
---
source: tests/integration_tests/approval_ui.rs
expression: combined
---
exit_code: 0
----- stdout -----
⚪ [2mpost-create declined[0m
✅ [32mCreated new worktree for [1m[32mtest/nested-branch[0m[32m from [1m[32mmain[0m[32m at [1m[32m[REPO].test-nested-branch[0m[0m

💡 [2mTo enable automatic cd, run: wt config shell[0m

----- stderr -----

🟡 [33m[1m[33mtest-repo[0m ([2m[33mtest-repo[0m) wants to execute [1m[33m4[0m commands:[0m

🔄 post-create:
[40m [0m  [1m[34mecho[0m [32m'Branch: test-nested-branch'[0m[0m

🔄 post-create:
[40m [0m  [1m[34mecho[0m [32m'Worktree: [REPO].test-nested-branch'[0m[0m

🔄 post-create:
[40m [0m  [1m[34mecho[0m [32m'Repo: test-repo'[0m[0m

🔄 post-create:
[40m [0m  [1m[34mcd[0m [REPO].test-nested-branch [36m&&[0m [1m[34mpwd[0m[0m

💡 Allow and remember? [1m[y/N][0m
